<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/noteFragment">

    <fragment
        android:id="@+id/noteFragment"
        android:name="com.mypetprojectbyme.familyshoppinglist.ui.fragments.NoteFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_noteFragment_to_createNoteFragment"
            app:destination="@id/createNoteFragment" />
        <action
            android:id="@+id/action_noteFragment_to_editNoteFragment"
            app:destination="@id/editNoteFragment" />
    </fragment>
    <fragment
        android:id="@+id/createNoteFragment"
        android:name="com.mypetprojectbyme.familyshoppinglist.ui.fragments.CreateNoteFragment"
        android:label="@string/create_private_note"
        tools:layout="@layout/fragment_create_note" />
    <fragment
        android:id="@+id/editNoteFragment"
        android:name="com.mypetprojectbyme.familyshoppinglist.ui.fragments.EditNoteFragment"
        android:label="@string/edit_note"
        tools:layout="@layout/fragment_edit_note" />
</navigation>